--- a/cretive-agency/index.css
+++ b/cretive-agency/index.css
@@ -108,7 +108,7 @@ align-items: center;
     right: 0;
     width: 60px;
     height: 60px;
-    background: var(--primary-color)  url(/images/menu.png);
+    background: var(--primary-color)  url(./images/menu.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 30px;
@@ -118,7 +118,7 @@ align-items: center;
 
 }
 .toggle.active{
-    background: var(--primary-color)  url(/images/close.png);
+    background: var(--primary-color)  url(./images/close.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 25px;
